--- a/.gitconfig
+++ b/.gitconfig
@@ -1,6 +1,6 @@
 [user]
-    name = Sean Williams
-    email = seanthomaswilliams@gmail.com
+    name = Bill Thorp
+    email = bill3000@hotmail.com
 
 [core]
     editor = nvim
